# SignalProcessing

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
inc/: Headers.h  dsp.h  sinwave.h  squarewave.h  trianglewave.h  waveform.h
src/: dsp.cpp  main.cpp  sinwave.cpp  squarewave.cpp  triangelwave.cpp
